--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "mysql2": "^1.6.1",
     "nodemon": "^1.18.3"
   }
 }
